# ascent-dms

./: .Rprofile  .gitignore  .rscignore  README.md  global.R  server.R  ui.R
services/python/ascent-data-transfer/: config.ini  custom_logger.py  main.py  pyproject.toml  versions.py
services/python/ascent-data-transfer/acsm/: acsm.py  acsm_datafile.py  database.py
services/python/ascent-data-transfer/common/: column_mapping.py  database.py  fileio.py  guess_sql_types.py  helpers.py  instrument.py  instrument_database.py  local_database.py  remote_database.py  synch_record.py
services/python/ascent-data-transfer/db_credentials/: credentials-TEMPLATE.txt
services/python/ascent-data-transfer/dryerstats/: database.py  dryerstats.py  dryerstats_datafile.py
services/python/ascent-data-transfer/smps/: database.py  instrument_settings.py  smps.py  smps_datafile.py
services/python/ascent-data-transfer/test_data/acsm/instrument/: 2023_04_16_ACSM_nativeData.txt  2024_05_19_ACSM_nativeData.txt  2024_05_20_ACSM_nativeData.txt  2024_05_21_ACSM_nativeData.txt  2024_05_22_ACSM_nativeData.txt  2024_05_23_ACSM_nativeData.txt  2024_05_24_ACSM_nativeData.txt  2024_05_25_ACSM_nativeData.txt  2024_05_26_ACSM_nativeData.txt  2024_05_27_ACSM_nativeData.txt
services/python/ascent-data-transfer/test_data/dryerstats/instrument/: DryerStats_20240827.txt  DryerStatsv2000_20231219.txt
services/python/ascent-data-transfer/test_data/xact/instrument/: SAMPLE_01_04_2023__00_00_05.CSV  (+3 more)
services/python/ascent-data-transfer/xact/: database.py  instrument_settings.py  xact.py  xact_datafile.py
(+149 files in other folders)
